# Code/node/src/routes/courses.routes.ts
@@ -6,14 +6,17 @@ import {
     createCourseController,
     deleteCourseController,
 } from '../controllers/courses.controllers';
-import { validateCourse } from '../utils/validators/courses.validators';
+import { validateCourse } from '../middlewares/validators/courses.validators';
+import {
+    verifyJWT
+} from '../middlewares/authentication/jwt';
 
 const router = Router();
 
 router.get('/', getCoursesController);
 router.get('/:id', getCourseController);
-router.post('/', validateCourse, createCourseController);
-router.delete('/:id', deleteCourseController);
+router.post('/', verifyJWT, validateCourse, createCourseController);
+router.delete('/:id', verifyJWT, deleteCourseController);
 router.get('/:id/students', getCourseStudentsController);
 
 export default router
