# Code/node/src/routes/enrollments.routes.ts
@@ -3,10 +3,13 @@ import {
     enrollStudentController,
     unenrollStudentController,
 } from '../controllers/enrollments.controllers';
+import {
+    verifyJWT
+} from '../middlewares/authentication/jwt';
 
 const router = Router();
 
-router.post('/', enrollStudentController);
-router.delete('/', unenrollStudentController);
+router.post('/', verifyJWT, enrollStudentController);
+router.delete('/', verifyJWT, unenrollStudentController);
 
 export default router
