# Code/node/src/routes/students.routes.ts
@@ -7,13 +7,16 @@ import {
 } from '../controllers/students.controllers';
 import {
     validateStudent
-} from '../utils/validators/students.validators';
+} from '../middlewares/validators/students.validators';
+import {
+    verifyJWT
+} from '../middlewares/authentication/jwt';
 
 const router = Router();
 
 router.get('/', getStudentsController);
 router.get('/:id', getStudentController);
-router.post('/', validateStudent, createStudentController);
-router.delete('/:id', deleteStudentController);
+router.post('/', verifyJWT, validateStudent, createStudentController);
+router.delete('/:id', verifyJWT, deleteStudentController);
 
 export default router
